2006-11-16  Lluis Sanchez Gual <lluis@novell.com> 

	* AddLogEntryDialog.cs: New dialog that shows a new entry to be added
	  to a ChangeLog file.
	* ChangeLogAddIn.addin.xml: Added dependency to VersionControl.
	  Registered extension to the commit dialog. 
	* ChangeLogAddIn.mdp, Makefile.am: Updated.
	* ChangeLogAddInOptionsPanel.cs: Save the properties after changing
	  user data.
	* gtk-gui/generated.cs, gtk-gui/gui.stetic: New gui files.
	* CommitDialogExtensionWidget.cs: New extension of the commit dialog.

2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* ChangeLogAddIn.mdp: Updated.
	* .: Added svn:ignore for ChangeLogAddIn.pidb

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Updated versions.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* ChangeLogAddIn.addin.xml: Updated versions.
	* ChangeLogAddIn.mdp: Updated.

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Updated references.

2006-03-24 Grzegorz Sobanski  <silk@boktor.net>  

	* Makefile.am: removed unneeded references to nunit.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* ChangeLogAddIn.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* ChangeLogAddIn.addin.xml: Updated add-in versions.

2006-02-28  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>
	* ChangeLogAddIn.addin.xml:
	* ChangeLogAddInOptionsPanel.cs:
	* ChangeLogAddIn.cs:
	Fixed spelling.

2006-01-29  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* ChangeLogAddIn.cs:
	* ChangeLogAddInOptionsPanel.cs:
	Added copyright comment.

2006-01-25  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* ChangeLogAddIn.addin.xml: Fixed spelling of add-in.

2005-12-15  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* Makefile.am: Added AssemblyInfo.cs
	* AssemblyInfo.cs: Added version info.
	
2005-12-15  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* ChangeLogAddIn.cs: Fixed indention.
