@@ -6,25 +6,25 @@
     <property name="HelpButton">False</property>
     <property name="WindowPosition">CenterOnParent</property>
     <property name="HasSeparator">False</property>
-    <property name="Events">ButtonPressMask</property>
     <property name="MemberName" />
+    <property name="Events">ButtonPressMask</property>
     <child internal-child="VBox">
       <widget class="Gtk.VBox" id="dialog_VBox">
         <property name="BorderWidth">2</property>
-        <property name="Events">ButtonPressMask</property>
         <property name="MemberName" />
+        <property name="Events">ButtonPressMask</property>
         <child>
           <widget class="Gtk.VBox" id="vbox1">
             <property name="Spacing">6</property>
             <property name="BorderWidth">12</property>
-            <property name="Events">0</property>
             <property name="MemberName" />
+            <property name="Events">0</property>
             <child>
               <widget class="Gtk.Label" id="label3">
                 <property name="LabelProp">ChangeLog entry:</property>
                 <property name="Xalign">0</property>
-                <property name="Events">0</property>
                 <property name="MemberName" />
+                <property name="Events">0</property>
               </widget>
               <packing>
                 <property name="Position">0</property>
@@ -38,15 +38,15 @@
                 <property name="VscrollbarPolicy">Automatic</property>
                 <property name="HscrollbarPolicy">Automatic</property>
                 <property name="ShadowType">In</property>
+                <property name="MemberName" />
                 <property name="CanFocus">True</property>
                 <property name="Events">0</property>
-                <property name="MemberName" />
                 <child>
                   <widget class="Gtk.TextView" id="textview">
                     <property name="Text" />
+                    <property name="MemberName" />
                     <property name="CanFocus">True</property>
                     <property name="Events">0</property>
-                    <property name="MemberName" />
                   </widget>
                 </child>
               </widget>
@@ -69,8 +69,8 @@
         <property name="LayoutStyle">End</property>
         <property name="Spacing">10</property>
         <property name="BorderWidth">5</property>
-        <property name="Events">ButtonPressMask</property>
         <property name="MemberName" />
+        <property name="Events">ButtonPressMask</property>
         <child>
           <widget class="Gtk.Button" id="button7">
             <property name="UseStock">True</property>
@@ -78,10 +78,10 @@
             <property name="StockId">gtk-cancel</property>
             <property name="IsDialogButton">True</property>
             <property name="ResponseId">-6</property>
-            <property name="CanFocus">True</property>
-            <property name="Events">0</property>
             <property name="MemberName" />
             <property name="CanDefault">True</property>
+            <property name="CanFocus">True</property>
+            <property name="Events">0</property>
             <property name="label">gtk-cancel</property>
           </widget>
           <packing>
@@ -96,10 +96,10 @@
             <property name="StockId">gtk-ok</property>
             <property name="IsDialogButton">True</property>
             <property name="ResponseId">-5</property>
-            <property name="CanFocus">True</property>
-            <property name="Events">0</property>
             <property name="MemberName" />
             <property name="CanDefault">True</property>
+            <property name="CanFocus">True</property>
+            <property name="Events">0</property>
             <property name="label">gtk-ok</property>
           </widget>
           <packing>
